ecmascript/parser/tests/test262-error-references/fail/e5fabf7fc4ae5dea.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/e5fabf7fc4ae5dea.js:1:9
  |
1 | (a,...a)/*‪*/
  |         ^

